# cuewise

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  LINTING.md  LOGGER.md  README.md  ROADMAP.md  SECURITY.md  biome.json  commitlint.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.shared.ts
.changeset/: accessibility-improvements.md  animated-tick-checkbox.md  author-autocomplete.md  background-credit-refresh.md  bulk-quote-operations.md  compact-add-row-overflow.md  concept-cards.md  concept-editor-redesign.md  concept-grade-buttons.md  concept-insights.md  concept-starter-packs.md  concept-surfacing-on-add.md  concepts-page-polish.md  config.json  configurable-quote-display.md  csv-quote-import.md  cue-dot-logo.md  custom-background.md  dark-mode-fix.md  design-sync-tooling.md  due-date-auto-roll.md  eng-2-store-listing-refresh.md  fifty-taxis-like.md  focus-completed-task.md  glass-background-dead-image.md  glass-enhanced.md  glass-popover-legibility.md  goal-edit-form-polish.md  goal-link-picker-and-welcome-logo.md  goal-write-failures-surface.md  goals-widget-redesign.md  improve-charts-styling.md  localstorage-quota-classified.md  movement-break-reminder.md  newtab-calendar-widget.md  persist-quote-filters.md  pomodoro-calendar-companion.md  pomodoro-compact-timer.md  pomodoro-mini-settings.md  pomodoro-pip-popout.md  (+19 more)
.design-sync/: NOTES.md  config.json  conventions.md  ds-tailwind.src.css  prepare.mjs
.github/: CODEOWNERS  dependabot.yml
apps/macos/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.conf.test.ts  tauri.verify.conf.json
apps/macos/src-tauri/capabilities/: default.json
apps/macos/src-tauri/icons/: icon.icns
apps/macos/src-tauri/src/: error.rs  glow.rs  lib.rs  main.rs  posture.rs  scheduler.rs  tray.rs
scripts/: chrome-oauth-token.mts  publish-chrome.mts  (+2 more)
(+540 files in other folders)
