[package]
name = "cuewise-macos"
version = "0.1.0"
description = "Cuewise for macOS"
authors = ["Cuewise"]
edition = "2021"

[lib]
name = "cuewise_macos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for the transparent glow overlay windows (not
# Mac-App-Store compatible; the app is distributed directly).
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Timer for native wake scheduling; runs on Tauri's async runtime.
tokio = { version = "1", features = ["time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
# Keep the symbol table (drop only DWARF): panic=abort means any panic becomes a
# SIGABRT crash report, which is bare addresses without symbols (ENG-55).
strip = "debuginfo"
